--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="hard-level-page">
+      <div class="title-hard-level">Выберите сложность</div>
+
+      <div class="hard-level-select">
+        <button class="hard-level-select-button">1</button>
+        <button class="hard-level-select-button">2</button>
+        <button class="hard-level-select-button">3</button>
+      </div>
+
+      <div class="start-game-button-div">
+        <button class="start-game-button">Старт</button>
+      </div>
+      
+    </div>
+  </body>
 </html>
