new file:   cardGames.js 	modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="hard-level-page">
-      <div class="title-hard-level">Выберите сложность</div>
+    <div class="containeer">
+      <div class="hard-level-elem">
+        <div class="title-hard-level">Выберите сложность</div>
 
-      <div class="hard-level-select">
-        <button class="hard-level-select-button">1</button>
-        <button class="hard-level-select-button">2</button>
-        <button class="hard-level-select-button">3</button>
-      </div>
+        <div class="hard-level-select">
+          <button class="hard-level-select-button">1</button>
+          <button class="hard-level-select-button">2</button>
+          <button class="hard-level-select-button">3</button>
+        </div>
 
-      <div class="start-game-button-div">
-        <button class="start-game-button">Старт</button>
+        <div class="start-game-button-div">
+          <button class="start-game-button">Старт</button>
+        </div>
       </div>
-      
     </div>
   </body>
   <script src="cardGames.js"></script>
-
 </html>
